--- a/codex-cli/package.json
+++ b/codex-cli/package.json
@@ -26,6 +26,7 @@
     "dist"
   ],
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.10.1",
     "@inkjs/ui": "^2.0.0",
     "chalk": "^5.2.0",
     "diff": "^7.0.0",
